--- a/водка Drinker/водка Drinker/Properties/Resources.resx
+++ b/водка Drinker/водка Drinker/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="russian-vodka-beluga" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\russian-vodka-beluga.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Shop Window for Game" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Shop Window for Game.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
